--- a/transmit-c-1/pom.xml
+++ b/transmit-c-1/pom.xml
@@ -33,6 +33,18 @@
             <scope>test</scope>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>site.laomst</groupId>
+            <artifactId>transmit-b-5</artifactId>
+            <scope>compile</scope>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>site.laomst</groupId>
+            <artifactId>transmit-b-6</artifactId>
+            <scope>runtime</scope>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
